# CuKKS

./: .gitignore  CONTRIBUTING.ko.md  CONTRIBUTING.md  LICENSE  NOTICE  README.ko.md  README.md  REFERENCES.md  RELEASING.md  compile_commands.json  pyproject.toml  pyrightconfig.json  setup.py
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  build-wheels.yml  publish-packages.yml  release-milestone.yml  test-python.yml
benchmarks/: __init__.py  benchmark_inference.py  benchmark_tt_vs_regular.py  run_benchmarks.py
bindings/gpu_backend/: CMakeLists.txt
bindings/gpu_backend/src/: ckks_gpu_backend.cpp
bindings/openfhe_backend/: BUILD.md  CMakeLists.txt  README.md  pyproject.toml
bindings/openfhe_backend/examples/: bench_gpu.py  encrypted_mlp.py  encrypted_mlp_trained.py
bindings/openfhe_backend/src/: ckks_openfhe_backend.cpp  ckks_openfhe_gpu_backend.cpp
bindings/openfhe_backend/src/ckks/: torch_api.py
ckks_torch/: __init__.py  context.py  converter.py  tensor.py
ckks_torch/batching/: __init__.py
ckks_torch/examples/: __init__.py  encrypted_inference.py
ckks_torch/nn/: __init__.py  activations.py  attention.py  batchnorm.py  conv.py  flatten.py  layernorm.py  linear.py  module.py  pooling.py  sequential.py  tt_conv.py  tt_linear.py
ckks_torch/stats/: __init__.py  crypto_inv_sqrt.py  crypto_reciprocal.py  normalization.py
ckks_torch/utils/: __init__.py  approximations.py
cmake/: CuKKSBackend.cmake
cukks/: CMakeLists.txt  __init__.py  _cuda_compat.py  backend_loader.py  backend_protocol.py  cnn_layout.py  context.py  context.pyi  converter.py  depth_estimation.py  install_backend.py  module_registry.py  packed_batch_metadata.py  pyproject.toml  rotation_planning.py  tensor.py  tensor.pyi
cukks-cu118/: CMakeLists.txt  pyproject.toml
cukks-cu121/: CMakeLists.txt  pyproject.toml
cukks-cu124/: CMakeLists.txt  pyproject.toml
cukks-cu128/: CMakeLists.txt  pyproject.toml
cukks/_native/: ckks_openfhe_backend.cpp  ckks_openfhe_gpu_backend.cpp
cukks/_native/ckks/: __init__.py  torch_api.py
cukks/_native/ckks/backends/: __init__.py
cukks/analysis/: __init__.py  inverse_free_detect.py
cukks/batching/: __init__.py  amcp.py  dhp.py  layout.py  layout.pyi  packing.py  rihp.py
cukks/examples/: __init__.py  encrypted_inference.py
cukks/nn/: __init__.py  activations.py  adaptive_pooling.py  attention.py  batchnorm.py  block_diagonal.py  block_diagonal_low_rank.py  conv.py  conv1d.py  conv_transpose.py  dropout.py  embedding.py  encrypted_block_diag_lr.py  flatten.py  groupnorm.py  instancenorm.py  inverse_free_layernorm.py  layernorm.py  linear.py  module.py  padding.py  permuted_block_diagonal.py  pixel_shuffle.py  pooling.py  residual.py  sequential.py  upsample.py
cukks/stats/: __init__.py  crypto_inv_sqrt.py  crypto_reciprocal.py  normalization.py
cukks/utils/: __init__.py
docker/: manylinux-cuda118.Dockerfile  manylinux-cuda121.Dockerfile  manylinux-cuda124.Dockerfile  manylinux-cuda128.Dockerfile
docs/: README.md  api.md  benchmark-results.md  ci-cd.ko.md  ci-cd.md  concepts.md  gpu-acceleration.md  stip-attention.md
docs/examples/: 01_basic_encryption.py  02_mlp_inference.py  03_cnn_inference.py  04_statistics.py  05_bootstrapping.py  README.md  mnist.py
docs/ko/: README.md  api.md  concepts.md  examples.md
examples/: mnist_encrypted.py  resnet_encrypted.py  transformer_encrypted.py  unet_encrypted.py
experiments/: _bench_bdlr_worker.py  _bench_worker.py  _block_diag_bench_common.py  bench_block_diagonal.py  bench_block_diagonal_results.json  bench_tt_vs_regular.py  block_diagonal_results.json  decompose_and_bench.py  decompose_results.json  train_block_diagonal.py
experiments/checkpoints/: block_diag_h256_bs128.pt  block_diag_h256_bs16.pt  block_diag_h256_bs256.pt  block_diag_h256_bs32.pt  block_diag_h256_bs64.pt
experiments/results/: tt_vs_regular.csv  tt_vs_regular.json
openfhe-gpu-public/: CMakeLists.txt
openfhe-gpu-public/cmake/: FindThrust.cmake
openfhe-gpu-public/src/core/lib/gpu/: Basic.h  Context.cu  Context.h  CudaHelper.cu  DeviceVector.h  MemoryPool.h  NttImple.cu  Parameter.h  Utils.h
openfhe-gpu-public/src/pke/: CMakeLists.txt
openfhe-gpu-public/src/pke/lib/scheme/ckksrns/: ckksrns-fhe-gpu.cpp  ckksrns-fhe.cpp  ckksrns-schemeswitching.cpp
scripts/: check_tracked_artifacts.py  set_release_version.py
tests/: __init__.py  conftest.py  test_adaptive_pooling.py  test_amcp.py  test_auto_params.py  test_backend_loader.py  test_batching.py  test_bootstrap.py  test_bugfixes.py  test_conv1d.py  test_conv_transpose.py  test_converter.py  test_cuda_compat.py  test_depth_tracking.py  test_dhp.py  test_e2e.py  test_embedding.py  test_gpu_integration.py  test_groupnorm.py  test_instancenorm.py  test_inverse_free_layernorm.py  test_mock_backend.py  test_modularization_helpers.py  test_nn_modules.py  test_packed_batch_rotations.py  test_padding.py  test_pixel_shuffle.py  test_residual.py  test_rihp.py  test_serialization.py  test_state_propagation.py  test_stats.py  test_stip_attention.py  test_stip_wiring.py  test_tensor.py  test_tt_conv.py  test_tt_linear.py  test_upsample.py
tests/mocks/: __init__.py  mock_backend.py
