# ==============================================================================
# CuKKS-cu121 - GPU-accelerated CKKS Backend Package (CUDA 12.1)
# ==============================================================================
# pip install cukks-cu121
# ==============================================================================

[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11>=2.11",
    "cmake>=3.18",
    "ninja",
]
build-backend = "scikit_build_core.build"

# ==============================================================================
# Project Metadata
# ==============================================================================

[project]
name = "cukks-cu121"
version = "0.1.1"
description = "CKKS Homomorphic Encryption backend with CUDA 12.1 GPU acceleration"
readme = "../README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "CuKKS Authors"}
]
keywords = [
    "homomorphic-encryption",
    "CKKS",
    "OpenFHE",
    "GPU",
    "CUDA",
    "privacy",
    "cryptography",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "torch>=2.1",
]

[project.urls]
Homepage = "https://github.com/devUuung/CuKKS"
Repository = "https://github.com/devUuung/CuKKS"
Issues = "https://github.com/devUuung/CuKKS/issues"

# ==============================================================================
# scikit-build-core Configuration
# ==============================================================================

[tool.scikit-build]
cmake.version = ">=3.18"
cmake.build-type = "Release"
wheel.install-dir = "."
build.verbose = true

# ==============================================================================
# CMake Configuration Variables
# ==============================================================================

[tool.scikit-build.cmake.define]
CUKKS_ENABLE_GPU = "ON"
OPENFHE_GPU_ROOT = "../openfhe-gpu-public"
CMAKE_CUDA_ARCHITECTURES = "70;75;80;86;89;90"

# ==============================================================================
# cibuildwheel Configuration (GPU)
# ==============================================================================

[tool.cibuildwheel]
build = "cp310-manylinux_x86_64 cp311-manylinux_x86_64 cp312-manylinux_x86_64 cp313-manylinux_x86_64 cp314-manylinux_x86_64"
skip = "*-musllinux*"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "ghcr.io/devuuung/cukks/manylinux-cuda121:latest"

before-all = """
set -ex
cd /project/openfhe-gpu-public
mkdir -p build && cd build
cmake .. \
    -DWITH_CUDA=ON \
    -DWITH_OPENMP=ON \
    -DCMAKE_BUILD_TYPE=Release \
    -DCMAKE_INSTALL_PREFIX=/usr/local \
    -DBUILD_SHARED=ON \
    -DCMAKE_CUDA_ARCHITECTURES="70;75;80;86;89;90"
make -j$(nproc)
make install
ldconfig
"""

environment = { OPENFHE_GPU_ROOT = "/project/openfhe-gpu-public", OPENFHE_GPU_BUILD_DIR = "/project/openfhe-gpu-public/build", CUDA_HOME = "/usr/local/cuda-12.1" }

repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
