# ==============================================================================
# CuKKS - CPU-only CKKS Backend Package
# ==============================================================================
# pip install cukks
# ==============================================================================

[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11>=2.11",
    "cmake>=3.18",
    "ninja",
]
build-backend = "scikit_build_core.build"

# ==============================================================================
# Project Metadata
# ==============================================================================

[project]
name = "cukks"
version = "0.1.0"
description = "CKKS Homomorphic Encryption backend (CPU-only)"
readme = "../README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "CuKKS Authors"}
]
keywords = [
    "homomorphic-encryption",
    "CKKS",
    "OpenFHE",
    "privacy",
    "cryptography",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.23",
    "torch>=2.1",
]

[project.urls]
Homepage = "https://github.com/devUuung/CuKKS"
Repository = "https://github.com/devUuung/CuKKS"
Issues = "https://github.com/devUuung/CuKKS/issues"

# ==============================================================================
# scikit-build-core Configuration
# ==============================================================================

[tool.scikit-build]
cmake.version = ">=3.18"
cmake.build-type = "Release"
wheel.install-dir = "."
build.verbose = true

# ==============================================================================
# CMake Configuration Variables
# ==============================================================================

[tool.scikit-build.cmake.define]
CUKKS_ENABLE_GPU = "OFF"
OPENFHE_GPU_ROOT = "../openfhe-gpu-public"

# ==============================================================================
# cibuildwheel Configuration
# ==============================================================================

[tool.cibuildwheel]
# Build only for Python 3.11 on Linux x86_64
build = "cp311-manylinux_x86_64"
skip = "*-musllinux*"

[tool.cibuildwheel.linux]
# Use manylinux_2_28 for newer glibc (required for OpenFHE)
manylinux-x86_64-image = "manylinux_2_28"

# Build OpenFHE before building the wheel
before-all = """
set -ex
yum install -y cmake3 openssl-devel ninja-build autoconf automake libtool
ln -sf /usr/bin/cmake3 /usr/bin/cmake || true

# Build OpenFHE CPU-only
cd /project/openfhe-gpu-public
mkdir -p build-cpu && cd build-cpu
cmake .. \
    -DWITH_CUDA=OFF \
    -DWITH_OPENMP=ON \
    -DCMAKE_BUILD_TYPE=Release \
    -DCMAKE_INSTALL_PREFIX=/usr/local \
    -DBUILD_SHARED=ON
make -j$(nproc)
make install
ldconfig
"""

# Environment for the build
environment = { OPENFHE_GPU_ROOT = "/project/openfhe-gpu-public", OPENFHE_GPU_BUILD_DIR = "/project/openfhe-gpu-public/build-cpu" }

# Repair wheel to bundle shared libraries
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
